refactor: centralize cli utilities and file handling
Consolidate XML/process utilities and file collection to reduce duplication while standardizing CLI error handling and dependency selection. This improves maintainability by keeping shared behaviors in dedicated helpers.